# mp2-lab5-tables

./: .gitmodules  CMakeLists.txt  README.md
include/: logger.h  polinom.h  row.h  table.h  union_of_tables.h
include/common/: table.h
include/tables/: hash_table.h  sorted_table.h  unsorted_table.h
samples/: main.cpp  reader.cpp
